# ai_esp32

./: CMakeLists.txt
AImodel/: .gitignore  CMakeLists.txt  sdkconfig
AImodel/main/: AImodel.c  CMakeLists.txt
AImodel/main/models/: model_1.bst  model_2.bst  model_3.bst
components/: CMakeLists.txt  i2c-lcd.c  i2c-lcd.h
main/: AImodel.c  CMakeLists.txt
main/models/: model_1.bst  model_2.bst  model_3.bst  model_4.bst  model_5.bst  model_6.bst  model_7.bst
testAImodel/: CMakeLists.txt  sdkconfig.old
testAImodel/main/: CMakeLists.txt  model_0.bst  testAImodel.c
