idf_component_register(SRCS "AImodel.c"
                    INCLUDE_DIRS "."                    
                    EMBED_FILES "models\\model_1.bst"
                                "models\\model_2.bst"
                                "models\\model_3.bst"
                                "models\\model_4.bst"
                                "models\\model_5.bst"
                                )